# Pagmo-solver-distributed

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/algorithms/: CMakeLists.txt  islandTest.cpp
src/algorithms/include/: islandTest.h
src/distributed/: CMakeLists.txt
src/distributed/discovery/: CMakeLists.txt  udp_dll_wrapper.cpp  udp_registry.cpp
src/distributed/discovery/include/: udp_base.h  udp_dll_wrapper.h  udp_registry.h
src/distributed/dynamic/: CMakeLists.txt
src/distributed/dynamic/include/: defines.h  dll_visibility.h  lib_loader.h
src/distributed/logic/: CMakeLists.txt  distributed_controller.cpp  distributed_island.cpp  distributed_worker.cpp  dll_locator.cpp
src/distributed/logic/include/: distributed_controller.h  distributed_island.h  distributed_worker.h  dll_locator.h
src/distributed/messages/: CMakeLists.txt
src/distributed/messages/include/: MsgType.h  msgpack23.h
src/distributed/sockets/: CMakeLists.txt  client_socket.cpp  dealer_socket.cpp  pair_socket.cpp  router_socket.cpp  server_socket.cpp  socket.cpp
src/distributed/sockets/include/: client_socket.h  dealer_socket.h  pair_socket.h  router_socket.h  server_socket.h  socket.h  vector_deserialize.h  vector_serialize.h
src/distributed/utils/: CMakeLists.txt
src/distributed/utils/include/: UUID.h  vector_istreambuf.h  vector_streambuf.h
src/distributed_archipelago/: CMakeLists.txt  distributed_island.cpp
src/distributed_archipelago/include/: distributed_island.h
src/run_example/: CMakeLists.txt  main.cpp
src/run_example/algorithms/: CMakeLists.txt  base_problem.cpp  dll_problem_wrapper.cpp  islandTest.cpp
src/run_example/algorithms/include/: base_problem.h  dll_problem_wrapper.h  islandTest.h
src/run_example/problems/: CMakeLists.txt  base_problem.cpp  example_problem_single_objective.cpp
src/run_example/problems/include/: base_problem.h  example_problem_single_objective.h
