add_library(distributed_logic distributed_island.cpp distributed_controller.cpp distributed_worker.cpp)

target_include_directories(distributed_logic PUBLIC include)

target_link_libraries(distributed_logic distributed_messages)
target_link_libraries(distributed_logic cppzmq libzmq)
target_link_libraries(distributed_logic pagmo)