add_library(distributed_sockets socket.cpp server_socket.cpp router_socket.cpp client_socket.cpp dealer_socket.cpp pair_socket.cpp)

target_include_directories(distributed_sockets PUBLIC include)

target_link_libraries(distributed_sockets distributed_messages)
target_link_libraries(distributed_sockets cppzmq libzmq)
